Prevent wrapping of controls

--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ html, body {
 	background: #FFF;
 	border-bottom: 1px solid #E3E3E3;
 	padding: 15px;
+	white-space: nowrap;
+	overflow-y: scroll;
 }
 
 #renderers {
